--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Walter+Turncoat);
+
 body {
     background-color: gray;
 	/* Use a system font, if none are available use an available sans-sarif   font */
@@ -7,15 +9,37 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
+  background-image: url("https://i.ibb.co/BN2bszY/52eb4c43ad266b111552d01bd87c66c9.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-section.board {
-  display: grid;
-  grid-template-rows: repeat(3, 10vmin);
-  grid-template-columns: repeat(3, 10vmin);
-  grid-gap: 0vmin;
-  margin: 200px;
+h1{
+ font-family: 'Walter Turncoat', Arial, sans-serif;
+  text-align: center;
+  font-size: 40px;
 }
+
+
+
+section.board {
+  font-family: 'Walter Turncoat', Arial, sans-serif;
+  font-weight: normal;
+  font-style: normal;
+  display: grid;
+  position: relative;
+  text-align: center;
+  font-size: 80px;
+  color: red;
+  display: grid;
+  position: relative;
+  grid-template-columns: repeat(3, 1fr);
+  margin: 15px;
+  grid-auto-rows: minmax(100px, auto);
+  grid-auto-columns: minmax(100px, auto);
+  
+}
+
 
 div {
   border: 3px solid black;
