--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,22 @@ body {
   background-size: cover;
 }
 
+button {
+  font-family: 'Walter Turncoat', Arial, sans-serif;
+}
+
 h1{
  font-family: 'Walter Turncoat', Arial, sans-serif;
   text-align: center;
-  font-size: 40px;
+  font-size: 60px;
 }
 
+h2 {
+  font-family: 'Walter Turncoat', Arial, sans-serif;
+  text-align: center;
+  font-size: 50px;
+  color: red;
+}
 
 
 section.board {
